--- a/bid10huan_hyzx/templates/DetailModel.html
+++ b/bid10huan_hyzx/templates/DetailModel.html
@@ -8,7 +8,6 @@
     <meta name="description" content="$data.description" />
     <meta name="applicable-device" content="pc,mobile" />
     <meta http-equiv="Cache-Control" content="no-transform" />
-    <link rel="icon" href="$data.hostUrl/statics/images/favicon.ico" />
     <link rel="stylesheet" href="$data.hostUrl/statics/css/style11.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="$data.hostUrl/statics/css/kefu.css" />
     <script type="text/javascript" src="$data.hostUrl/statics/js/skin/jquery.min.js"></script>
@@ -23,9 +22,9 @@
             <input name="keyword" type="text" class="search-keyword fl" id="search-keyword" value="请输入关键词" onfocus="if(this.value=='请输入关键词'){this.value='';}" onblur="if(this.value==''){this.value='请输入关键词';}" />
             <button type="submit" class="search-submit fl">搜 索</button>
         </div>
-        <div class="login">
+        <!--<div class="login">
             <a href="http://vip.100dh.cn/login" target="_blank">会员登录</a>
-        </div>
+        </div>-->
     </div>
     #parse("navigation.html")
     <div class="ban_1001"></div>
@@ -45,7 +44,13 @@
                 <div class="ban_708"></div>
                 <div class="con">$data.hInfo.articlecontent</div>
                 <div class="ban_708"></div>
-                <div class="b_box6">上一篇：<a href='$data.BPage.Href'>$data.BPage.Title</a> <br /></div>
+                #foreach($p in $data.pList)
+                #if($p.Sort==-1)
+                <div class="b_box6">上一篇：<a href='$p.titleURL'>$p.Title</a> <br /></div>
+                #else if($p.Sort==1)
+                <div class="b_box6">下一篇：<a href='$p.titleURL'>$p.Title</a> <br /></div>
+                #end
+                #end
             </div>
         </div>
         <div class="right_1">
