--- a/bid10huan_hyzx/templates/head.html
+++ b/bid10huan_hyzx/templates/head.html
@@ -8,7 +8,6 @@
     <meta name="description" content="$data.htmlTitle" />
     <meta name="applicable-device" content="pc,mobile" />
     <meta http-equiv="Cache-Control" content="no-transform" />
-    <link rel="icon" href="$data.hostUrl/statics/images/favicon.ico" />
     <link rel="stylesheet" href="$data.hostUrl/statics/css/style11.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="$data.hostUrl/statics/css/kefu.css" />
     <script type="text/javascript" src="$data.hostUrl/statics/js/skin/jquery.min.js"></script>
@@ -24,7 +23,7 @@
             <button type="submit" class="search-submit fl">搜 索</button>
             <!--</form>-->
         </div>
-        <div class="login">
+        <!--<div class="login">
             <a href="http://vip.100dh.cn/login" target="_blank">会员登录</a>
-        </div>
+        </div>-->
     </div>
