--- a/bid10huan_hyzx/templates/sitemap.html
+++ b/bid10huan_hyzx/templates/sitemap.html
@@ -3,11 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>站点地图</title>
-    <meta name="keywords" content="十环网咨询">
-    <meta name="description" content="十环网咨询">
-    <link rel="stylesheet" href="/hyzx/statics/css/reset.css">
-    <link rel="stylesheet" href="/hyzx/statics/css/main.css">
-    <link href="/hyzx/statics/css/basedev.css" rel="stylesheet" type="text/css" />
+    <meta name="keywords" content="$data.hostName">
+    <meta name="description" content="$data.hostName">
+    <link rel="stylesheet" href="$data.hostUrl/statics/css/reset.css">
+    <link rel="stylesheet" href="$data.hostUrl/statics/css/main.css">
+    <link href="$data.hostUrl/statics/css/basedev.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <style type="text/css">
@@ -150,7 +150,7 @@
             <tr> <td><hr size="1" color="#e0e0e0"></td> </tr>
             <tr>
                 <footer>
-                    <script type="text/javascript" src="/statics/js/baidujs.js"></script>
+                    <script type="text/javascript" src="$data.hostUrl/statics/js/baidujs.js"></script>
                 </footer>
         </tbody>
     </table> </script>
