--- a/bid10huan_hyzx/statics/css/style11.css
+++ b/bid10huan_hyzx/statics/css/style11.css
@@ -81,7 +81,7 @@ body {
         }
 
 .head {
-    width: 60%;
+    width: 1100px;
     height: 60px;
     padding: 20px 0;
     margin: 0 auto;
@@ -90,13 +90,15 @@ body {
 .logo {
     float: left;
     width: 270px;
+    display: inline-block;
 }
 
 .search {
-    float: left;
-    height: 38px;
-    width: 454px;
-    padding: 11px 100px;
+    float: right;
+    height: 60px;
+    margin-top: 15px;
+    margin-right: 75px;
+    display: inline-block;
 }
 
 .search-keyword {
@@ -148,8 +150,8 @@ body {
 }
 
     .nav ul {
-        width: 60%;
-        height: 45px;
+        width: 1100px;
+        height: 90px;
         line-height: 45px;
         font-size: 14px;
         font-weight: bold;
@@ -215,7 +217,7 @@ body {
 }
 
 .mainpage_list {
-    width: 60%;
+    width: 1100px;
     height: 500px;
     overflow: hidden;
     margin: auto;
@@ -250,7 +252,7 @@ body {
 /*--/mainpage end--*/
 
 .weizhi {
-    width: 60%;
+    width: 1100px;
     margin: 0 auto 10px auto;
     line-height: 18px;
     text-indent: 20px;
@@ -258,7 +260,7 @@ body {
 }
 
 .main1 {
-    width: 60%;
+    width: 1100px;
     margin: 0 auto;
 }
 
@@ -1468,7 +1470,7 @@ body {
 }
 
 .ban_1001 {
-    width: 1000px;
+    width: 1100px;
     overflow: hidden;
     margin: 0 auto 10px auto;
 }
@@ -1497,7 +1499,7 @@ body {
         }
 /*--/link end--*/
 .foot {
-    width: 100%;
+    width: 1100px;
     margin: 0 auto;
     padding: 20px 0;
     text-align: center;
