--- a/bid10huan_hyzx/templates/DetailModel.html
+++ b/bid10huan_hyzx/templates/DetailModel.html
@@ -27,7 +27,7 @@
     <div class="ban_1001"></div>
     <div class="weizhi">
         您的当前位置：<a href='$data.hostUrl/'>主页</a> >
-        <a href='$data.hostUrl/list_${data.hInfo.columnId}.html'>$data.columnName</a> >
+        <a href='$data.hostUrl/list-${data.hInfo.columnId}.html'>$data.columnName</a> >
         正文
     </div>
     <div class="main1">
