--- a/bid10huan_hyzx/templates/Product.html
+++ b/bid10huan_hyzx/templates/Product.html
@@ -3,7 +3,7 @@
 <div class="ban_1001"></div>
 <div class="weizhi">
     您的当前位置：<a href='$data.hostUrl/'>主页</a> >
-    <a href='$data.hostUrl/list_${data.cId}.html'>$data.columnName</a> >
+    <a href='$data.hostUrl/list-${data.cId}.html'>$data.columnName</a> >
 </div>
 <div class="main1">
     <div class="left_1">
