--- a/bid10huan_hyzx/templates/sitemap.html
+++ b/bid10huan_hyzx/templates/sitemap.html
@@ -140,7 +140,7 @@
                 <h3 class="indextit1 indextit3">行业分类</h3>
                 <ul class="navtreefirst">
                     #foreach($c in $data.columnsList)
-                    <li><a href="$data.hostUrl/list_${c.Id}.html" title="$c.columnName">$c.columnName</a></li>
+                    <li><a href="$data.hostUrl/list-${c.Id}.html" title="$c.columnName">$c.columnName</a></li>
                     #end
                 </ul>
             </div>
